<resources>
  <string name="app_name">Shopisan_v1</string>
</resources>