...
                fontFamily: "Mulish-Bold",
              }}
              textDecorationLine="underline"
              size={2}
              textAlign="center"
            >
              Log in
            </CustomText>
          </View>
        </View>
      ) : (
        <View style={styles.mainViewContainer}>
          {/* <LogoIcon height={height(20)} width={height(20)} /> */}
...
